<resources>
    <string name="app_name">Calculator</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="muti">x</string>
    <string name="divide">/</string>
    <string name="equal">=</string>
    <string name="deg">deg</string>
    <string name="c">c</string>
    <string name="percent">%</string>
    <string name="dot">.</string>
    <string name="ket_qua">Kết quả =</string>
</resources>